WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179563
REGRESSION(
r224623
) [MIPS] branchTruncateDoubleToInt32() doesn't set return register when branching
https://bugs.webkit.org/show_bug.cgi?id=179563
Summary
REGRESSION(r224623) [MIPS] branchTruncateDoubleToInt32() doesn't set return r...
Guillaume Emont
Reported
2017-11-10 16:49:04 PST
When run with BranchIfTruncateSuccessful, branchTruncateDoubleToInt32() fails to set dest before branching.
Attachments
Patch
(6.68 KB, patch)
2017-11-10 17:30 PST
,
Guillaume Emont
no flags
Details
Formatted Diff
Diff
Patch
(6.61 KB, patch)
2017-11-10 17:44 PST
,
Guillaume Emont
no flags
Details
Formatted Diff
Diff
Patch
(6.77 KB, patch)
2017-11-13 07:22 PST
,
Guillaume Emont
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Guillaume Emont
Comment 1
2017-11-10 17:30:31 PST
Created
attachment 326665
[details]
Patch
Build Bot
Comment 2
2017-11-10 17:32:55 PST
Attachment 326665
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/assembler/testmasm.cpp:41: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Guillaume Emont
Comment 3
2017-11-10 17:44:54 PST
Created
attachment 326668
[details]
Patch Fix style issue
Michael Catanzaro
Comment 4
2017-11-11 16:52:16 PST
Windows EWS is failing
Guillaume Emont
Comment 5
2017-11-13 07:22:12 PST
Created
attachment 326759
[details]
Patch New version that doesn't use peprocessor macros inside CHECK_EQ.
Adrian Perez
Comment 6
2017-11-13 11:18:59 PST
Comment on
attachment 326759
[details]
Patch Reviewing informally... Patch LGTM. BTW, it's nice that this patch actually removes a few unneeded lines ;-)
WebKit Commit Bot
Comment 7
2017-11-14 13:53:44 PST
Comment on
attachment 326759
[details]
Patch Clearing flags on attachment: 326759 Committed
r224843
: <
https://trac.webkit.org/changeset/224843
>
WebKit Commit Bot
Comment 8
2017-11-14 13:53:46 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2017-11-15 09:36:05 PST
<
rdar://problem/35562039
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug